@@ -28,7 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [mjr] Fix task export to ActiveSync for tasks with no due dates or reminders.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1067,7 +1067,7 @@
    <date>2011-10-18</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [mjr] Fix task export to ActiveSync for tasks with no due dates or reminders.
    </notes>
   </release>
  </changelog>
